--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": "^8.1",
         "ext-intl": "*",
         "ext-mbstring": "*",
+        "irazasyed/telegram-bot-sdk": "^3.14",
         "laminas/laminas-escaper": "^2.13",
         "psr/log": "^3.0"
     },
